# test_task

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
test_api/endpoints_models/: app.py
test_api/endpoints_models/register/: api.py  model.py
test_api/tests/: conftest.py  test_register.py
test_api/utils/: logger.py  validator.py
test_ui/src/locators/: google_locators.py  yandex_locators.py
test_ui/src/models/: constants.py
test_ui/src/pages/: application.py  base_page.py  google_page.py  yandex_page.py
test_ui/tests/: conftest.py  test_google_page.py  test_yandex.py
